
syntax = "proto3";

//option java_package = "io.grpc.examples.routeguidetest";
option java_package = "org.rld.grpc.routeguide";
option java_multiple_files = true;
option java_outer_classname = "RouteGuideProto";
option objc_class_prefix = "RTGT";

package routeguide;

service RouteGuide {

    // Obtain a Feature at a given Point.
    rpc GetFeature(Point) returns(Feature) {}

    // Obtain a list of features available in a given Rectangle.
    rpc ListFeatures(Rectangle) returns(stream Feature){}

    // Accepts a stream of all the Points on a Route being traversed,
    // returning a RouteSummary when traversal is completed.
    rpc RecordRoute(stream Point) returns(RouteSummary){}

    // Accepts a steam of RouteNotes sent while a route is being traversed
    // while receiving other RouteNotes (e.g. from other Users)
    rpc RouteChat(stream RouteNote) returns(stream RouteNote) {}
}

message Point {
    int32 longitude = 1;
    int32 latitude = 2;
}

message Feature {
    string name = 1;
    Point location = 2;
}

message Rectangle {
    Point low = 1;
    Point high = 2;
}

message RouteSummary {
    int32 point_count = 1;
    int32 features_count = 2;
    int32 distance = 3;
    int32 elapsed_time = 4;
}

message RouteNote {
    Point location = 1;
    string message_note = 2;
}

message FeatureDatabase {
  repeated Feature feature = 1;
}


